--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
@@ -27,5 +27,15 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - "5050:80"
+    volumes:
+      - ./config/servers.json:/pgadmin4/servers.json
+      - pgadmin-data:/var/lib/pgadmin
+
+volumes:
+  postgres_data:
+    name: 'postgres_data'
+  pgadmin-data:
+    name: 'pgadmin-data'
+
 
 
